# realms-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
channels/: Cargo.toml
channels/src/: broadcast.rs  lib.rs
cli/: Cargo.toml
cli/src/: config.rs  discord.rs  main.rs
config/: Cargo.toml
config/src/: lib.rs
discord/: Cargo.toml
discord/src/: cache.rs  lib.rs
realms_sdk/: Cargo.toml
realms_sdk/src/: instruction.rs  lib.rs  types.rs  utils.rs
realms_sdk/src/state/: governance.rs  proposal.rs  proposal_instruction.rs  realm.rs  signatory_record.rs  token_owner_record.rs  vote_record.rs
realms_sdk/src/tools/: account.rs  mod.rs
scripts/: build_cli.sh
