[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {path = "../config" }
clap = "2.33.3"
signal-hook = "0.3.9"
log = "0.4"
jemallocator = "0.3"
thiserror = "1"
anyhow = "1"
simplelog = "0.10"
tokio = { version = "1.14.0", features = ["rt-multi-thread","full", "macros"] }
