[package]
name = "realms_sdk"
version = "0.1.0"
edition = "2021"
description = "modified version of the governance program containing only the necessary information"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1"
serde_derive = "1"
solana-program = "1.10.26"
spl-token = "3.2.0"
thiserror = "1.0"