[package]
name = "tulip-realms-sdk"
version = "0.1.1"
edition = "2021"
authors = ["Tulip Protocol"]
description = "an sdk for working with spl governance realms"
keywords = ["solana", "realms", "governance", "defi"]
license = "MIT/Apache-2.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
spl-governance = "2.1.1"
spl-governance-tools = "0.1.2"
borsh = "0.9.1"
solana-client = "1.10.26"
solana-program = "1.10.26"
solana-account-decoder = "1.10.26"
tulip-sled-util = "0.1.4"
static-pubkey = "1.0.2"
chrono = "0.4.19"
log = "0.4.14"
anyhow = "1.0.42"
[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread","full"] }